# python-flask-api

./: README.md  app.py  database.json  pyproject.toml
%SystemDrive%/ProgramData/Microsoft/Windows/Caches/: {6AF0698E-D558-4F6E-9B3C-3716689AF493}.2.ver0x0000000000000001.db  {DDF571F2-BE98-426D-8288-1A9A39C3FDA2}.2.ver0x0000000000000001.db
